# riot-api-project

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  MIGRATION_GUIDE.md  README.md  REFACTOR_RULES.md  REPLICATION_SETUP_SUMMARY.md  compose.override.yaml  compose.prod.yaml  compose.yaml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  test_radon_hook.py
backend/: .dockerignore  AGENTS.md  CACHE_IMPLEMENTATION_SUMMARY.md  CLAUDE.md  MIGRATIONS.md  README.md  __init__.py  alembic.ini  entrypoint.sh  main.py  pyproject.toml  requirements.txt  reset_admin_password.py
backend/alembic/: AGENTS.md  env.py
backend/alembic/versions/: 001_initial_schema_with_all_tables_3cf0af6dff87.py  002_seed_initial_job_configurations_ed197c195294.py  003_reorganize_schemas_auth_core_jobs_d32798c29221.py  004_drop_app_schema_03230a19b98b.py  005_create_users_table_3e390f28278a.py  005_create_users_table_7dc7d16fed5b.py  006_change_password_hash_to_text_a1b2c3d4e5f6.py  006_seed_admin_accounts_db1231550d08.py  007_drop_old_smurf_detections_table_2438ef1ce370.py  1b9da77b35df_add_player_analysis_table.py  2d051c0a629b_update_job_type_enum_values.py  5e775a6127a0_split_player_analyzer_into_three_jobs.py  60189bfa0198_add_matches_exhausted_to_players_table.py  6104f75cdfe9_add_apscheduler_table_to_alembic_.py  67d72b54c74e_seed_initial_job_configurations.py  69dcb5a3c7f9_remove_unused_indexes.py  71631d07966c_baseline_initial_schema_from_existing_.py  7b7f0cdbbb1e_initial_schema_with_uppercase_enums.py  833296d94323_add_score_check_constraints.py  add_data_tracking_tables.py  eee6cc88f8fb_add_rate_limited_status_to_jobstatus_.py  f1f8d9c3a2b7_seed_job_configurations_by_environment.py  f3d1e5fc09c5_add_unique_constraint_on_job_type.py
backend/app/: AGENTS.md  __init__.py  config.py  database.py  generics.py  init_db.py  main.py  protocols.py
backend/app/algorithms/: AGENTS.md  __init__.py  performance.py  rank_progression.py  win_rate.py
backend/app/api/: AGENTS.md  __init__.py  dependencies.py  detection.py  jobs.py  matches.py  matchmaking.py  players.py  settings.py
backend/app/config/: tasks.py
backend/app/core/: AGENTS.md  __init__.py  config.py  database.py  decorators.py  dependencies.py  enums.py  exceptions.py  logging.py  models.py  rate_limiter.py  validation.py
backend/app/core/riot_api/: AGENTS.md  __init__.py  client.py  constants.py  data_manager.py  errors.py  models.py  rate_limiter.py  transformers.py
backend/app/features/: AGENTS.md  __init__.py
backend/app/features/auth/: __init__.py  dependencies.py  models.py  router.py  schemas.py  service.py
backend/app/features/jobs/: AGENTS.md  README.md  __init__.py  apscheduler_models.py  base.py  dependencies.py  log_capture.py  models.py  router.py  scheduler.py  schemas.py  service.py
backend/app/features/matches/: README.md  __init__.py  dependencies.py  gateway.py  match_transformers.py  models.py  orm_models.py  participants.py  participants_orm.py  participants_schemas.py  repository.py  router.py  schemas.py  service.py  transformers.py
backend/app/features/matchmaking_analysis/: README.md  __init__.py  dependencies.py  gateway.py  models.py  orm_models.py  repository.py  router.py  schemas.py  service.py  service_new.py  transformers.py
backend/app/features/player_analysis/: AGENTS.md  README.md  __init__.py  config.py  dependencies.py  models.py  orm_models.py  repository.py  router.py  schemas.py  service.py  transformers.py
backend/app/features/players/: MIGRATION_SUMMARY.md  README.md  __init__.py  dependencies.py  gateway.py  models.py  orm_models.py  ranks.py  ranks_schemas.py  repository.py  router.py  schemas.py  service.py  transformers.py
backend/app/features/settings/: README.md  __init__.py  dependencies.py  models.py  router.py  schemas.py  service.py
backend/app/features/smurf_detection/: AGENTS.md  README.md  config.py  dependencies.py  models.py  service.py
backend/app/jobs/: AGENTS.md  __init__.py  ban_checker.py  base.py  error_handling.py  log_capture.py  log_handler.py  match_fetcher.py  player_analyzer.py  scheduler.py  smurf_analyzer.py  tracked_player_updater.py
backend/app/middleware/: __init__.py  performance.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: 81596165fa0c_initial_schema_with_string_puuid.py  __init__.py  ad5ad0661dc8_initial_schema.py  bcccc91a83c7_add_data_tracking_tables.py  f3ffda16584b_change_puuid_to_varchar.py
backend/app/models/: __init__.py  apscheduler.py  base.py  data_tracking.py  job_tracking.py  matches.py  matchmaking_analysis.py  participants.py  players.py  ranks.py  settings.py  smurf_detection.py
backend/app/riot_api/: AGENTS.md  __init__.py  cache.py  client.py  data_manager.py  endpoints.py  errors.py  models.py  rate_limiter.py  transformers.py
backend/app/schemas/: __init__.py  detection.py  jobs.py  matches.py  participants.py  players.py  ranks.py  response_jobs_schema.py  response_matches_schema.py  settings.py  smurf_detection.py  transformers.py
backend/app/services/: AGENTS.md  __init__.py  decorators.py  detection.py  detection_config.py  exceptions.py  jobs.py  matches.py  matchmaking_analysis.py  players.py  settings.py  stats.py  utils.py
backend/app/services/analyzers/: __init__.py  account_level_analyzer.py  base_analyzer.py  performance_analyzer.py  rank_progression_analyzer.py  win_rate_analyzer.py  win_rate_trend_analyzer.py
backend/app/tasks/: __init__.py  data_cleanup.py  detection_tasks.py  match_fetching.py  player_analysis.py  queue.py  scheduler.py  workers.py
backend/app/tests/: AGENTS.md
backend/app/tests/api/: __init__.py  test_detection.py  test_matches.py  test_players.py
backend/app/tests/jobs/: __init__.py  test_base.py  test_integration.py  test_player_analyzer.py  test_scheduler.py  (+1 more)
backend/app/utils/: __init__.py  decorators.py  statistics.py
backend/backend/: __init__.py
backend/migrations/: 001_add_detection_factor_columns.sql
backend/scripts/: create_admin_user.py  manage_admin.py
docs/: jobs.md  (+15 more)
(+225 files in other folders)
