[project]
name = "riot-api-backend"
version = "0.1.0"
description = "Riot API backend for player's performance and match history analysis."
authors = [
    {name = "Marek Hovadík", email = "marek.hovadik@seznam.cz"},
    {name = "Matěj Kadlec", email = "mat.kadlec@email.cz"},
]
dependencies = [
    "alembic>=1.17.0",
    "apscheduler>=3.10.4",
    "argon2-cffi>=23.1.0",
    "asyncpg>=0.30.0",
    "email-validator>=2.1.0",
    "fastapi>=0.118.2",
    "httpx>=0.28.1",
    "passlib[argon2]>=1.7.4",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.1.1",
    "python-jose[cryptography]>=3.3.0",
    "python-Levenshtein>=0.25.1",
    "python-multipart>=0.0.20",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.43",
    "structlog>=25.4.0",
    "tenacity>=9.1.2",
    "uvicorn[standard]>=0.37.0",
]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "black>=25.9.0",
    "isort>=6.1.0",
    "flake8>=7.3.0",
    "mypy>=1.18.2",
    "vulture>=2.14",
    "radon>=6.0.1",
]

[tool.black]
line-length = 88
target-version = ['py313']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.bandit]
exclude_dirs = ["tests", "tools", "alembic"]
skips = ["B101", "B601", "B104", "B311"]

[tool.pyright]
include = ["app", "main.py"]
exclude = [
    "**/__pycache__",
    "**/.pytest_cache",
    "**/node_modules",
    "**/tests",
    ".venv"
]

pythonVersion = "3.13"
typeCheckingMode = "standard"
stubPath = "typings"
venvPath = "/app"
venv = ".venv"
# Note: venv is in Docker at /app/.venv (managed by uv). Pre-commit tools run via uvx (isolated envs) or docker exec (Docker's venv)
useLibraryCodeForTypes = true

# Keep these strict-but-gentle nudges
reportMissingImports = true

# Helpful for gradual typing; flip to "error" later in strict areas
reportUnknownArgumentType = "warning"
reportUnknownParameterType = "warning"
reportUnknownVariableType = "none"  # Disabled - user requested to skip these 92 errors
reportUnknownMemberType = "warning"
reportUntypedFunctionDecorator = "warning"
reportUntypedClassDef = "warning"
reportUntypedNamedTuple = "warning"
reportUntypedBaseClass = "warning"

# Suppress unavoidable warnings
reportMissingTypeStubs = "none"  # Third-party libraries without type stubs
reportPrivateUsage = "none"  # Some SQLAlchemy internals (_AsyncSessionManager)

# Strict typing for high-value areas
strict = [
    "app/algorithms/**/*.py",
    "app/services/**/*.py",
    "app/models/**/*.py",
    "app/config.py",
    "app/database.py",
    "app/schemas/**/*.py"
]

[tool.vulture]
# Find dead/unused Python code with 60% confidence threshold
# This catches more potential dead code but may have false positives
# Review the findings and add exclusions or whitelist as needed
exclude = [
    ".venv/",
    "__pycache__/",
    "*.pyc",
    "app/models/",  # SQLAlchemy ORM fields appear unused but are accessed by framework
    "app/schemas/",  # Pydantic fields appear unused but are used for serialization
    "app/features/",  # Feature-based modules contain models/schemas with framework-accessed fields
    "app/algorithms/",  # Dataclass fields appear unused but are used by framework
    "app/tests/",  # Test fixtures and mocks often appear unused
    "app/core/riot_api/constants.py",  # Enum definitions used as constants
    "app/core/riot_api/models.py",  # Pydantic DTO fields from Riot API
    "app/core/config.py",  # Pydantic Settings properties may appear unused but are accessed by framework
]
ignore_decorators = ["@app.route", "@router.*", "@app.*", "@abstractmethod"]
ignore_names = [
    "test_*",
    "setUp",
    "tearDown",
    # Context manager protocol parameters
    "exc_type",
    "exc_val",
    "exc_tb",
    # Pydantic configuration
    "model_config",
    # CircuitBreaker method used for failure handling
    "on_failure",
    # SQLAlchemy ORM fields accessed indirectly by transformers
    "riot_id_name",
    "riot_id_tagline",
    # Utility functions for future use
    "dual_mode_decorator",
    # Pydantic Settings property accessed by framework
    "environment",
]
min_confidence = 60
paths = ["app/"]
# sort_by_size = true  # Uncomment to sort by size

[tool.radon]
# Cyclomatic Complexity thresholds
# A: 1-5 (simple)
# B: 6-10 (more complex)
# C: 11-20 (complex)
# D: 21-50 (very complex)
# E: 51-100 (extremely complex)
# F: 100+ (unmaintainable)
# Current state: avg=16.15, 1 function at E(36), 1 at D(23), 11 at C(11-20)
cc_min = "C"  # Fail on complexity >= 11 (matches current average)
exclude = "tests/*,alembic/*,scripts/*,*/migrations/*"

# Maintainability Index thresholds
# A: 20-100 (maintainable)
# B: 10-19 (moderately maintainable)
# C: 0-9 (difficult to maintain)
# Current state: ALL files are A grade, lowest=32.08
mi_min = "B"  # Fail on MI < 20 (all files currently exceed this)
paths = ["app/"]

[tool.pydocstyle]
# Use PEP 257 base convention (compatible with ReST-style :param:/:returns:)
convention = "pep257"

# Relax strict formatting rules while maintaining quality
# D203: 1 blank line required before class docstring (conflicts with D211)
# D213: Multi-line docstring summary should start at second line (conflicts with D212)
# D401: First line should be in imperative mood (too strict for technical code)
add-ignore = ["D203", "D213", "D401"]

# Match other tool exclusions
match = "(?!test_).*\\.py"
match-dir = "^(?!(tests|alembic|scripts|__pycache__|migrations)).*"
